--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,30 @@
+2003-07-30  Robert Millan  <robertmh@gnu.org>
+
+	* libtool.m4: More fixes for the new GNU/FreeBSD triplet.
+
+2003-07-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* config.guess, config.sub: Synchronized from ftp.gnu.org since
+	Robert Millan's patch requires it.
+
+2003-07-30  Robert Millan  <zeratul2@wanadoo.es>
+
+	* libtool.m4: Fixed to use the new GNU/FreeBSD triplet.
+	* ltdl.m4: Fixed to use the new GNU/FreeBSD triplet.
+	* ltmain.in: Remove GNU/FreeBSD cases, which are no longer needed.
+
+2003-07-30  Andreas Schwab  <schwab@suse.de>
+
+	* libtool.m4 (_LT_AC_LOCK): Also match powerpc64-*linux* in
+	addition to ppc64-*linux*.  From Markus Meissner
+	<meissner@bogus.example.com>.
+
+2003-07-30  Dalibor Topic  <robilad@yahoo.com>
+
+	* libtool.m4 (AC_LIBTOOL_SYS_MAX_CMD_LEN): For AmigaOS with pdksh,
+	set the maximum command line length to 8K since otherwise the test
+	takes over an hour to run.
+
 2003-06-25  Alexandre Oliva  <aoliva@redhat.com>, Tim Waugh  <twaugh@redhat.com>
 
 	* libtool.m4: Replace mis-uses of path with pathname.
