--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-30  Christiaan Welvaart  <cjw@daneel.dyndns.org>
+
+	* tests/dryrun.test: Ignore any 'total' line from "ls -l" output.
+
 2003-07-30  Robert Millan  <robertmh@gnu.org>
 
 	* libtool.m4: More fixes for the new GNU/FreeBSD triplet.
