* libtool.m4: Remove parentheses around finish_eval part which broke on amigaos pdksh.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-30  Tony Wyatt <wyattaw@optushome.com.au>
+	* libtool.m4: Remove parentheses around finish_eval part which
+	broke on amigaos pdksh.
+
 2003-07-30  Christiaan Welvaart  <cjw@daneel.dyndns.org>
 
 	* tests/dryrun.test: Ignore any 'total' line from "ls -l" output.
