--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,11 @@ NEWS - list of user-visible changes between releases of GNU Libtool
 
 New in 1.5b: 2003-??-??; CVS version 1.5a, Libtool team:
 * Bug fixes.
-
+
+New in 1.5.1: 2003-??-??; CVS version 1.5.0a, Libtool team:
+* lt_dlrealloc is an official part of the libltdl API.
+* Bug fixes.
+
 New in 1.5: 2003-04-14; CVS version 1.4e, Libtool team:
 * First stable release of multi-language architecture.
 * libtool and libltdl support for Mac OS/X.
