--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -1371,7 +1371,7 @@ any of their required library directories are added to the library path.
 @cindex mode, install
 
 In @dfn{install} mode, libtool interprets most of the elements of
-@var{mode-args} as an installation command beginning with 
+@var{mode-args} as an installation command beginning with
 @code{cp}, or a BSD-compatible @code{install} program.
 
 The following components of @var{mode-args} are treated specially:
@@ -1379,11 +1379,11 @@ The following components of @var{mode-args} are treated specially:
 @table @samp
 @item -inst-prefix @var{inst-prefix-dir}
 When installing into a temporary staging area, rather than the
-final @var{prefix}, this argument is used to reflect the 
+final @var{prefix}, this argument is used to reflect the
 temporary path, in much the same way @code{automake} uses
 @var{DESTDIR}.  For instance, if @var{prefix} is @code{/usr/local},
 but @var{inst-prefix-dir} is @code{/tmp}, then the object will be
-installed under @code{/tmp/usr/local/}.  If the installed object 
+installed under @code{/tmp/usr/local/}.  If the installed object
 is a libtool library, then the internal fields of that library
 will reflect only @var{prefix}, not @var{inst-prefix-dir}:
 
@@ -1399,16 +1399,16 @@ not
 libdir='/tmp/usr/local/lib'
 @end example
 
-@code{inst-prefix} is also used to insure that if the installed 
-object must be relinked upon installation, that it is relinked 
-against the libraries in @var{inst-prefix-dir}/@var{prefix}, 
+@code{inst-prefix} is also used to insure that if the installed
+object must be relinked upon installation, that it is relinked
+against the libraries in @var{inst-prefix-dir}/@var{prefix},
 not @var{prefix}.
 
 In truth, this option is not really intended for use when calling
 libtool directly; it is automatically used when @code{libtool --mode=install}
-calls @code{libtool --mode=relink}.  Libtool does this by 
-analyzing the destination path given in the original 
-@code{libtool --mode=install} command and comparing it to the 
+calls @code{libtool --mode=relink}.  Libtool does this by
+analyzing the destination path given in the original
+@code{libtool --mode=install} command and comparing it to the
 expected installation path established during @code{libtool --mode=link}.
 
 Thus, end-users need change nothing, and @code{automake}-style
@@ -2968,11 +2968,18 @@ function, return -1 and set an error message for retrieval with
 @end deftypefun
 
 @deftypevar {lt_ptr (*) (size_t @var{size})} lt_dlmalloc
+@deftypevarx {lt_ptr (*) (lt_ptr @var{ptr}, size_t @var{size})} lt_dlrealloc
 @deftypevarx {void (*) (lt_ptr @var{ptr})} lt_dlfree
-These variables are set to @code{malloc} and @code{free}, by default,
-but you can set them to any other functions that provides equivalent
-functionality.  However, you must not modify their values after calling
-any libltdl function other than @code{lt_dlpreopen_default} or the macro
+These variables are set to @code{malloc}, @code{realloc} and @code{free} by
+default, but you can set them to any other functions that provide equivalent
+functionality.  If you change any of these function pointers, you will almost
+certainly need to change all three to point into the same malloc library.
+Strange things will happen if you allocate memory from one library, and then
+pass it to an implementation of @code{free} that doesn't know what book
+keeping the allocator used.
+
+You must not modify any of their values after calling any libltdl function
+other than @code{lt_dlpreopen_default} or the macro
 @code{LTDL_SET_PRELOADED_SYMBOLS}.
 @end deftypevar
 
