--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2003-08-27  Gary V. Vaughan  <gary@gnu.org>
 
+	* libtool.m4 (_LT_AC_CHECK_DLFCN): Use the interrim new
+	AC_CHECK_HEADER with compiler rather than preprocessor.
+	(AC_LIBTOOL_SETUP): ...which was introduced in autoconf-2.56, so
+	we AC_PREREQ that version.
+	* ltdl.m4 (AC_WITH_LTDL, AC_LIB_LTDL, AC_LTDL_FUNC_ARGZ): Ditto.
+
+2003-08-27  Gary V. Vaughan  <gary@gnu.org>
+
 	Work around a bug in AU_ALIAS in CVS Autoconf that inserts a
 	newline just before AC_FD_CC, by hand updating:
 
