--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-09-10  Peter O'Gorman  <peter@pogma.com>
 
+	* mdemo2/configure.ac: Use AC_LIBTOOL_DLOPEN.
+	* mdemo2/main.c: Use LTDL_SET_PRELOADED_SYMBOLS().
+	* mdemo2/Makefile.am: Set INCLUDES properly and add -dlopen force
+	to make sure the symbols file is included in the link line.
+
 	* ltmain.in: Accept -framework for darwin and put it in
 	dependency_libs. For non-installed .la's try to avoid having
 	./.libs/.libs/libfoo.so on the link line.
