Added myself to AUTHORS, removed from THANKS.

--- a/AUTHORS
+++ b/AUTHORS
@@ -9,3 +9,4 @@ Gary V. Vaughan <gvv@techie.com>.  Co-maintainer.
 Ossama Othman <ossama@debian.org>.  Co-maintainer.
 Robert Boehne <rboehne@ricardo-us.com>.  Co-maintainer.
 Bob Friesenhahn <bfriesen@simple.dallas.tx.us>.  Co-maintainer.
+Peter O'Gorman <peter@pogma.com>. Co-maintainer.
