--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-09-21  Robert Millan  <robertmh@gnu.org>
+
+	* libtool.m4: Add GNU/KNetBSD support.
+	* ltdl.m4: Likewise.
+
 2003-09-10  Peter O'Gorman  <peter@pogma.com>
 
 	* mdemo2/configure.ac: Use AC_LIBTOOL_DLOPEN.
