--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-26  Alfred M. Szmidt  <ams@kemisten.nu>
+	* mdemo2/Makefile.am (INCLUDES): Include `$(top_srcdir)/../libltdl'
+	instead of `../libltdl'.
+
 2003-09-24  Gary V. Vaughan  <gary@gnu.org>
 
 	* bootstrap: Rewritten to use autoreconf.
