--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,18 @@
+2003-09-29  Scott James Remnant  <scott@netsplit.com>
+
+	* m4/libtool.m4 (AC_DEPLIBS_CHECK_METHOD): Use pass_all for linux*
+	solving many build problems on ARM, and hopefully preventing any
+	future ones.
+	(Debian Bug #191133 and #190569)
+
 2003-09-29  Bob Friesenhahn <bfriesen@simple.dallas.tx.us>,
-            Dalibor Topic <robilad@kaffe.org>
+	Dalibor Topic <robilad@kaffe.org>
 
 	* libltdl/ltdl.c: Only include malloc.h if stdlib.h can not be
 	found.
 
 2003-09-26  Alfred M. Szmidt  <ams@kemisten.nu>
+
 	* mdemo2/Makefile.am (INCLUDES): Include `$(top_srcdir)/../libltdl'
 	instead of `../libltdl'.
 
