--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-10-05  Peter O'Gorman <peter@pogma.com>, 
+	Gary V. Vaughan  <gary@gnu.org>
+
+	* ltmain.in: Remove inferrence of mode, add shorthand for mode
+	choice.
+
 2003-09-29  Scott James Remnant  <scott@netsplit.com>
 
 	* m4/libtool.m4 (AC_DEPLIBS_CHECK_METHOD): Use pass_all for linux*
