--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-07  Gary V. Vaughan  <gary@gnu.org>
+
+	* ltmain.in: Typo in the --mode shorthand.
+
 2003-10-07  Scott James Remnant  <scott@netsplit.com>
 
 	* m4/libtool.m4 (AC_DEPLIBS_CHECK_METHOD): Remove dead code
