--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-10-07  Ralph Schleicher  <rs@nunatak.allgaeu.org>
+
+	* doc/libtool.texi (Compile mode): Be more specific about the
+	effect of `-static'.
+	* ltmain.in: Do not create `.lo' objects when `-static' is
+	specified.
+	* NEWS: Updated.
+
 2003-10-07  Gary V. Vaughan  <gary@gnu.org>
 
 	* doc/libtool.texi (Invoking libtool): Updated.
