--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-10-07  Marcus Comstedt  <marcus@mc.pp.se>
+
+	* m4/libtool.m4 [amigaos-ppc, amigaos-m68k]: Differentiate between
+	amigaos on ppc and m68k.
+	* NEWS: Updated.
+
 2003-10-07  Ralph Schleicher  <rs@nunatak.allgaeu.org>
 
 	* ltmain.in: Do not create `.o' objects when `-shared' is
