--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,7 @@ New in 1.5b: 2003-??-??; CVS version 1.5a, Libtool team:
 * libtoolize installs libtool.m4 (and ltdl.m4 if used) to AC_CONFIG_M4_DIR.
 * Mode inferrence removed, shorthand for choosing modes added.
 * Specifying -allow-undefined is now an error.
+* Initial support for amigaos-ppc.
 * Bug fixes.
 
 New in 1.5.1: 2003-??-??; CVS version 1.5.0a, Libtool team:
