--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-10-07  Gary V. Vaughan  <gary@gnu.org>
+
+	* ltmain.in: Don't suppress output of PIC mode compile if
+	-no-suppress option is given.
+	* doc/libtool.texi (Invoking libtool): Document it.
+	* NEWS: Updated.
+
 2003-10-07  Marcus Comstedt  <marcus@mc.pp.se>
 
 	* m4/libtool.m4 [amigaos-ppc, amigaos-m68k]: Differentiate between
