--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-12  Peter O'Gorman <peter@pogma.com>
+
+	* m4/libtool.m4: Speed up max_cmd_len check.
+
 2003-10-08  Gary V. Vaughan  <gary@gnu.org>
 
 	* libtoolize.in: AC_CONFIG_M4_DIR has landed in CVS autoconf.
