--- a/NEWS
+++ b/NEWS
@@ -14,6 +14,7 @@ New in 1.5b: 2003-??-??; CVS version 1.5a, Libtool team:
 * Mode inferrence removed, shorthand for choosing modes added.
 * Specifying -allow-undefined is now an error.
 * Initial support for amigaos-ppc.
+* Speed up max_cmd_len check.
 * Bug fixes.
 
 New in 1.5.1: 2003-??-??; CVS version 1.5.0a, Libtool team:
