--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,58 @@
+2003-10-14  Gary V. Vaughan  <gary@gnu.org>
+
+	Refactor all the test case common code into shell functions in
+	tests/defs, and move the various demo directories out of
+	$top_srcdir, and into tests too.  The refactoring showed up a
+	number of inconsistencies and latent bugs, as well as fixing (I
+	think!!) the long-standing annoyance with some of the tests giving
+	spurious failures intermittently.  While I was here, emacs kindly
+	removed a lot of bogus whitespace and added copyright notices for
+	us:
+
+	* cdemo, demo, depdemo, f77demo, mdemo, mdemo2, pdemo, tagdemo:
+	Moved from here...
+	* tests/cdemo, tests/demo, tests/depdemo, tests/f77demo,
+	tests/mdemo, tests/mdemo2, tests/pdemo, tests/tagdemo: ...to
+	here.
+	* tests/defs: Factor much common functionality from the test
+	scripts into shell functions.  Added a copyright notice.
+	* tests/assign.test, tests/cdemo-conf.test, tests/cdemo-exec.test,
+	tests/cdemo-make.test, tests/cdemo-shared.test,
+	tests/cdemo-static.test, tests/demo-conf.test,
+	tests/demo-deplibs.test, tests/demo-exec.test,
+	tests/demo-inst.test, tests/demo-make.test,
+	tests/demo-nofast.test, tests/demo-nopic.test,
+	tests/demo-pic.test, tests/demo-shared.test,
+	tests/demo-static.test, tests/demo-unst.test,
+	tests/depdemo-conf.test, tests/depdemo-exec.test,
+	tests/depdemo-inst.test, tests/depdemo-make.test,
+	tests/depdemo-nofast.test, tests/depdemo-shared.test,
+	tests/depdemo-static.test, tests/depdemo-unst.test,
+	tests/f77demo-conf.test, tests/f77demo-exec.test,
+	tests/f77demo-make.test, tests/f77demo-shared.test,
+	tests/f77demo-static.test, tests/link-2.test, tests/link.test,
+	tests/mdemo-conf.test, tests/mdemo-exec.test,
+	tests/mdemo-inst.test, tests/mdemo-make.test,
+	tests/mdemo-shared.test, tests/mdemo-static.test,
+	tests/mdemo-unst.test, tests/mdemo2-conf.test,
+	tests/mdemo2-exec.test, tests/mdemo2-make.test, tests/nomode.test,
+	tests/pdemo-conf.test, tests/pdemo-exec.test,
+	tests/pdemo-inst.test, tests/pdemo-make.test,
+	tests/pdemo-unst.test, tests/quote.test, tests/sh.test,
+	tests/suffix.test, tests/tagdemo-conf.test,
+	tests/tagdemo-exec.test, tests/tagdemo-make.test,
+	tests/tagdemo-shared.test, tests/tagdemo-static.test: Refactored
+	to use new functions in tests/defs.  Added a copyright notice.
+	* tests/hardcode.test, noinst-link.test,
+	tests/relink.test, tests/relink.test,
+	tests/mdryrun.test: Ditto.  Moved from here...
+	* tests/demo-hardcode.test, demo-noinst-link.test,
+	tests/demo-relink.test, tests/depdemo-relink.test,
+	tests/mdemo-dryrun.test: ...to here respectively.
+	* Makefile.am: Added a copyright notice.
+	* tests/sh.test: Check libtoolize.in for non-portabilities too.
+	* libtoolize.in: Fix non-portabilities found by tests/sh.test.
+
 2003-10-12  Peter O'Gorman <peter@pogma.com>
 
 	* m4/libtool.m4: Speed up max_cmd_len check.
