* tests/Makefile.am (COMMON_TESTS): Remove pdemo-unst.test, which isn't a real test.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-10-14  Gary V. Vaughan  <gary@gnu.org>
 
+	* tests/Makefile.am (COMMON_TESTS): Remove pdemo-unst.test, which
+	isn't a real test.
+
+2003-10-14  Gary V. Vaughan  <gary@gnu.org>
+
 	Refactor all the test case common code into shell functions in
 	tests/defs, and move the various demo directories out of
 	$top_srcdir, and into tests too.  The refactoring showed up a
